update gestor